--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 DATABASE_URL='postgresql+psycopg2://moringa:Access@localhost/pitchapp'
 
 FLASK_APP="manage.py"
+
+MAIL_USERNAME='kelly.kiiru@student.moringaschool.com'
+
+MAIL_PASSWORD='@Kiiru2022'
