--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ python-dotenv==0.20.0
 SQLAlchemy==1.4.36
 toml==0.10.2
 visitor==0.1.3
+waitress==2.1.1
 Werkzeug==1.0.1
 wtf==0.1
 WTForms==3.0.1
