add SQLALCHEMY_DATABASE_URI to .env

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 DATABASE_URL='postgresql+psycopg2://moringa:Access@localhost/pitchapp'
 
+SQLALCHEMY_DATABASE_URI='postgresql+psycopg2://moringa:Access@localhost/pitchapp'
+
 FLASK_APP="manage.py"
 
 MAIL_USERNAME='kelly.kiiru@student.moringaschool.com'
