--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==1.7.7
 amqp==5.1.1
+argcomplete==2.0.0
+autopep8==1.6.0
 billiard==3.6.4.0
 blinker==1.4
+celery==5.2.6
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==7.1.2
@@ -23,6 +26,7 @@ Flask-Script==2.0.6
 Flask-Script-Extras==0.1.4
 Flask-SimpleMDE==0.3.0
 Flask-SQLAlchemy==2.5.1
+Flask-Uploads==0.2.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
 gunicorn==20.1.0
@@ -43,18 +47,24 @@ pathspec==0.9.0
 pipreqs==0.4.11
 platformdirs==2.5.2
 prompt-toolkit==3.0.29
+psycopg2==2.9.3
 psycopg2-binary==2.9.3
+pycodestyle==2.8.0
+python-dotenv==0.20.0
 pytz==2022.1
 requests==2.27.1
 six==1.16.0
 SQLAlchemy==1.4.36
+toml==0.10.2
 tomli==2.0.1
-typing_extensions==4.2.0
+typing-extensions==4.2.0
 urllib3==1.26.9
 vine==5.0.0
 visitor==0.1.3
+waitress==2.1.1
 wcwidth==0.2.5
 Werkzeug==1.0.1
+wtf==0.1
 WTForms==3.0.1
 yarg==0.1.9
 zipp==3.8.0
